--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Each section has different themes and products with mock images -->
     <script>
       const sections = [
-        "Books", "Guides", "Gear", "Seeds", "Gardening Designs", "Team Logos", "Sarcasm is a Gift", "T-Shirts", "Mugs", "Backpack"
+        "Printed Books", "Ebooks", "Gear", "Seeds", "Gardening Designs", "Team Logos", "Sarcasm is a Gift", "T-Shirts", "Mugs", "Backpack"
       ];
 
       document.addEventListener("DOMContentLoaded", () => {
